# research.okmtyuta.phd

./: Cargo.toml  docker-compose.yaml
client/: Cargo.toml  Dioxus.toml  Dockerfile
client/assets/: main.css
client/src/: main.rs
lib/: Cargo.toml
